added ssafy tongue project with docker

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="timeline-block">
                     <h1>국내 여행지 AI 맞춤 추천 웹 서비스 — Front & BackEnd</h1>
                     <ul class="stack-btn">
-                        <li>JSP</li>
+                        <li>SpringBoot</li>
                         <li>JAVA</li>
                         <li>MYSQL</li>
                         <li>vanila js</li>
@@ -148,7 +148,7 @@
                                     아키텍처 설계
                                 </a>
                             </span>
-                            : vanila js - JSP, Servlet - Database 및 Github CI 구성
+                            : vanila js - SpringBoot - Database 및 Docker, Github CI/CD 구성
                             <!-- <ul class="detail-content-ul">
                                 <li><span class="detail-content-date">▫ 아키텍처 도식: 
                                     <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin/blob/main/README.md#using-stacks-" class="underline-link" title="서비스 화면 및 설명">
@@ -176,8 +176,21 @@
                             </span>
                             <ul class="detail-content-ul">
                                 <li>
-                                    <span class="">▫ Servlet 구현을 통한 MVC 패턴 적용 + JSP + MYSQL 적용</span>
+                                    <span class="style-bold">▫ SpringBoot MVC 패턴+ Docker image 생성 및 Github CI/CD 구성 AWS 배포</span>
+                                    <p style="padding-left: 15px;">
+                                        : API 서버 배포 완료
+                                        <span class="style-bold">
+                                            (url : <a target="_blank" rel="author" href="http://ec2-13-124-121-142.ap-northeast-2.compute.amazonaws.com:8080/user/hi">check it out!!</a>)
+                                        </span>
+                                        <br>
+                                        <a target="_blank" rel="author" href="https://github.com/dahyunko/Tongue" class="underline-link" title="프로젝트 자세한 설명" >
+                                            BackEnd: See more Go to GitHub API Server
+                                        </a>
+                                    </p>
                                 </li>
+                                <!-- <li>
+                                    <span class="">▫ Servlet 구현을 통한 MVC 패턴 적용 + JSP + MYSQL 적용</span>
+                                </li> -->
                                 <li>
                                     <span class="style-bold">▫ Gemini AI를 활용한 사용자 맞춤 여행지 코스 추천</span> 
                                     <p style="padding-left: 15px;">
@@ -202,7 +215,7 @@
                             <span class="detail-content-midname non-bold">
                                 <!-- <i class="fas fa-square"></i> -->
                                 <a target="_blank" rel="author" href="https://github.com/dahyunko/RecommandTripWithGemini" class="underline-link" title="프로젝트 자세한 설명" >
-                                    .. See more Go to GitHub RecommandTripWithGemini
+                                    FrontEnd: See more Go to GitHub RecommandTripWithGemini
                                 </a>
                         </span>
                         </li>
