tongue project with prize insert

--- a/index.html
+++ b/index.html
@@ -130,10 +130,12 @@
                         <li>SpringBoot</li>
                         <li>JAVA</li>
                         <li>MYSQL</li>
-                        <li>vanila js</li>
-                        <li>Servlet</li>
+                        <li>Vue</li>
+                        <li>Maven</li>
+                        <li>AWS</li>
+                        <li>Gemini API</li>
                     </ul>
-                    <p>: 공공데이터, Kakao Map, Google Gemini AI API를 활용한 국내 여행지 및 개인화 맟춤 코스 추천 웹 서비스 </p>
+                    <p>: 공공데이터, TMap, Google Gemini AI API를 활용한 국내 여행지 및 개인화 맟춤 코스 추천 웹 서비스 </p>
                     <!-- <p>: 2023 상반기 IT 분야별 <span class="hilight underline">트렌드 분석</span> 및 <span class="hilight underline">개인화 맞춤 일자리 추천</span> 서비스 </p> -->
                     <ul class="make_interval">
                         <!-- <li>
@@ -144,11 +146,11 @@
                         <li>
                             <span class="detail-content-midname">
                                 <i class="fas fa-square"></i>
-                                <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin/blob/main/README.md#using-stacks-" class="underline-link" title="아키텍처 도식 보기">
+                                <a target="_blank" rel="author" href="https://github.com/TongueTripVogue/Tongue_Back?tab=readme-ov-file#using-stacks-" class="underline-link" title="아키텍처 도식 보기">
                                     아키텍처 설계
                                 </a>
                             </span>
-                            : vanila js - SpringBoot - Database 및 Docker, Github CI/CD 구성
+                            : Vue.js - SpringBoot - Database 및 Docker, Github Actions CI/CD 구성
                             <!-- <ul class="detail-content-ul">
                                 <li><span class="detail-content-date">▫ 아키텍처 도식: 
                                     <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin/blob/main/README.md#using-stacks-" class="underline-link" title="서비스 화면 및 설명">
@@ -182,42 +184,40 @@
                                         <span class="style-bold">
                                             (url : <a target="_blank" rel="author" href="http://ec2-13-124-121-142.ap-northeast-2.compute.amazonaws.com:8080/user/hi">check it out!!</a>)
                                         </span>
-                                        <br>
-                                        <a target="_blank" rel="author" href="https://github.com/dahyunko/Tongue" class="underline-link" title="프로젝트 자세한 설명" >
-                                            BackEnd: See more Go to GitHub API Server
-                                        </a>
                                     </p>
                                 </li>
-                                <!-- <li>
-                                    <span class="">▫ Servlet 구현을 통한 MVC 패턴 적용 + JSP + MYSQL 적용</span>
-                                </li> -->
                                 <li>
-                                    <span class="style-bold">▫ Gemini AI를 활용한 사용자 맞춤 여행지 코스 추천</span> 
+                                    <span class="style-bold">▫ Spring Security, JWT 사용자 인증, 인가 구현</span>
+                                </li>
+                                <li>
+                                    <span class="style-bold">▫ Gemini AI, TMAP을 활용한 사용자 맞춤 여행지 코스 추천</span> 
                                     <p style="padding-left: 15px;">
-                                        : 고객의 성별, 일정, 인원 수, 이동 방법 등의 니즈 정보 + Gemini API promt + Kakao Map API
-                                        <br/>
-                                        * 추후 chat 기능 추가 고도화 예정
+                                        : 고객의 성별, 일정, 인원 수, 이동 방법 등의 니즈 정보 + Gemini API promt + TMap API
                                     </p>
+                                    <ul style="padding-left: 15px;">
+                                        <li>- Gemini API, Json 형태로 여행 정보 제공</li>
+                                        <li>- TMAP 실시간 경유지 경로, 시간, 비용 정보 제공</li>
+                                        <li>- 실시간 행선지 추가 및 변경 가능</li>
+                                    </ul>
                                 </li>
                                 <li>
                                     <span class="style-bold">▫ 국내 지역별 장소 검색 기능</span> 
                                     <p style="padding-left: 15px;">
-                                        : 공공 데이터 API 지역 정보 활용하여 장소 정보 및 지도 제공
+                                        : 공공 데이터 API, TMAP API 지역 정보 활용하여 장소 정보 및 지도 제공
                                     </p>
                                 </li>
                                 <li>
-                                    <span class="style-bold">▫ Session 활용 사용자 정보 관리</span> 
-        
+                                    <span class="detail-content-midname non-bold">
+                                        <!-- <i class="fas fa-square"></i> -->
+                                        <a target="_blank" rel="author" href="https://github.com/TongueTripVogue/Tongue_Back" class="underline-link" title="프로젝트 자세한 설명" >
+                                            BackEnd: See more Go to GitHub Tongue_Back
+                                        </a><br>
+                                        <a target="_blank" rel="author" href="https://github.com/TongueTripVogue/Tongue_Front" class="underline-link" title="프로젝트 자세한 설명" >
+                                            FrontEnd: See more Go to GitHub Tongue_Front
+                                        </a>
+                                </span>
                                 </li>
                             </ul>
-                        </li>
-                        <li>
-                            <span class="detail-content-midname non-bold">
-                                <!-- <i class="fas fa-square"></i> -->
-                                <a target="_blank" rel="author" href="https://github.com/dahyunko/RecommandTripWithGemini" class="underline-link" title="프로젝트 자세한 설명" >
-                                    FrontEnd: See more Go to GitHub RecommandTripWithGemini
-                                </a>
-                        </span>
                         </li>
                     </ul>
                 </div>
@@ -601,9 +601,9 @@
                     <p>: Java JSP 프로젝트와 CS 스터디 진행 중에 있습니다. </p>
                     <li>
                         <span class="detail-content-midname">
-                            <a target="_blank" rel="author" href="https://github.com/dahyunko/RecommandTripWithGemini" class="underline-link" title="스터디 자세한 설명" >
+                            <a target="_blank" rel="author" href="https://github.com/TongueTripVogue" class="underline-link" title="" >
                                 <i class="fas fa-square"></i> 국내 여행지 AI 맞춤 추천 웹 서비스
-                            </a>
+                            </a> : 1학기 프로젝트 최우수상 수상 [삼성전자주식회사]
                         </span>
                     </li>
                     <li>
@@ -612,7 +612,7 @@
                                 <i class="fas fa-square"></i> CS_Study(OS, Network)
                             </a>
                         </span>
-                        <span> : 우수 스터디 선정</span>
+                        <span> : 매월 우수 스터디 선정</span>
                     </li>
                     <time>2024.01 - present</time>
                 </div>
