feat: 신한 해커톤

--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
                             <a target="_blank" rel="author" href="https://github.com/team-conSOLtant" class="underline-link" title="" >
                                 <i class="fas fa-square"></i> SOL 학생 로드맵
                             </a> 
-                        </span>
-                        <span> : 2024년 신한은행 해커톤 최우수상 수상 </span>
+                        </span>:
+                        <span style="color: #0046ff; font-weight: 700;">2024년 신한은행 해커톤 최우수상</span>
                     </li>
                     <li>
                         <span class="detail-content-midname">
                             <i class="fas fa-square"></i>  하이라이트 기반 스크랩 및 공유 플랫폼
                         </span>
-                        <span> : 2학기 공통 프로젝트 1등 우수상 수상</span>
+                        <span> : 2학기 공통 프로젝트 1등 우수상</span>
                     </li>
                     <li>
                         <span class="detail-content-midname">
@@ -144,7 +144,7 @@
                                 <i class="fas fa-square"></i> 국내 여행지 AI 맞춤 추천 웹 서비스
                             </a> 
                         </span>
-                        <span> : 1학기 관통 프로젝트 1등 최우수상 수상</span>
+                        <span> : 1학기 관통 프로젝트 1등 최우수상</span>
                     </li>
                     <li>
                         <span class="detail-content-midname">
@@ -165,7 +165,7 @@
                                 <i class="fas fa-square"></i> 위치 및 이미지 기반 웹 신고 서비스
                             </a>
                         </span>
-                        <span> : 소융대 학술제 최우수상 수상</span>
+                        <span> : 소융대 학술제 최우수상 외 4건</span>
                     </li>
                     <time>2021.03 - 2024.02</time>
                 </div>
@@ -181,7 +181,7 @@
             <div class="detail-content">
                 <a name="loc-and-image-develope"></a>
                 <div class="timeline-block">
-                    <h1>SOL 학생 로드맵 — BE & FE</h1>
+                    <h1>SOL 학생 로드맵, 신한은행 해커톤 — BE & FE / 팀장</h1>
                     <ul class="stack-btn">
                         <li>SpringBoot</li>
                         <li>MYSQL</li>
@@ -189,27 +189,41 @@
                         <li>Elasticsearch</li>
                         <li>AWS</li>
                     </ul>
-                    <p>: 선후배 연결을 통한 고객의 취업과 자산관리 플랫폼</p>
+                    <p>: 학생 포트폴리오기반 선후배 연결을 통한 고객의 취업과 자산관리 플랫폼</p>
                     <ul class="make_interval">
                         <li>
                             <span class="detail-content-midname">
-                                <i class="fas fa-square"></i>개발 기간 및 인원
+                                <i class="fas fa-square"></i>기획/개발 기간 및 인원
                             </span>
                             <span> : 1개월/ 5인</span>
                         </li>
                         <li>
                             <span class="detail-content-midname">
-                                <i class="fas fa-square"></i>서비스 개발 내역
+                                <i class="fas fa-square"></i>관리
+                            </span>
+                            <span> : WBS 기반으로
+                                <a href="https://github.com/orgs/team-conSOLtant/projects" class="underline-link" target="_blank">Github 프로젝트</a> 및 KPT 회고</span>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>서비스 BE 개발
                             </span>
                             <ul class="detail-content-ul">
                                 <li>
-                                    ▫ 
+                                    ▫ Docker로 Elasticsearch 구축하고 단일 키워드 검색 API 구현하여 성능 최적화
                                 </li>
                                 <li>
                                     ▫ Spring Security, JWT 사용자 인증, 인가 구현
                                 </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>서비스 FE 개발
+                            </span>
+                            <ul class="detail-content-ul">
                                 <li>
-                                    ▫ 
+                                    ▫ Chart.js를 활용하여 모범 금융 로드맵 추천 구현 및 API 연동
                                 </li>
                             </ul>
                         </li>
@@ -222,7 +236,7 @@
                     </ul>
                 </div>
                 <div class="timeline-block">
-                    <h1>국내 여행지 AI 맞춤 추천 웹 서비스 — BE & FE</h1>
+                    <h1>국내 여행지 AI 맞춤 추천 웹 서비스 — BE & FE / 팀장</h1>
                     <ul class="stack-btn">
                         <li>SpringBoot</li>
                         <li>MYSQL</li>
@@ -254,7 +268,7 @@
                         </li>
                         <li>
                             <span class="detail-content-midname">
-                                <i class="fas fa-square"></i>서비스 개발 내역
+                                <i class="fas fa-square"></i>서비스 BE 개발
                             </span>
                             <ul class="detail-content-ul">
                                 <li>
@@ -263,16 +277,15 @@
                                 <li>
                                     ▫ Spring Security, JWT 사용자 인증, 인가 구현
                                 </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>서비스 FE 개발
+                            </span>
+                            <ul class="detail-content-ul">
                                 <li>
                                     ▫ Gemini AI, TMAP을 활용한 사용자 맞춤 여행지 코스 추천 
-                                    <!-- <p style="padding-left: 15px;">
-                                        : 고객의 성별, 일정, 인원 수, 이동 방법 등의 니즈 정보 + Gemini API promt + TMap API
-                                    </p>
-                                    <ul style="padding-left: 15px;">
-                                        <li>- Gemini API, Json 형태로 여행 정보 제공</li>
-                                        <li>- TMAP 실시간 경유지 경로, 시간, 비용 정보 제공</li>
-                                        <li>- 실시간 행선지 추가 및 변경 가능</li>
-                                    </ul> -->
                                 </li>
                                 <li>
                                     <span class="style-bold">▫ 국내 지역별 장소 검색 기능</span> 
@@ -355,7 +368,7 @@
                     </ul>
                 </div> -->
                 <div class="timeline-block">
-                    <h1>취약이웃 및 재난 신고 위치 및 이미지 기반 웹 솔루션 — BE</h1>
+                    <h1>취약이웃 및 재난 신고 위치 및 이미지 기반 웹 솔루션 — BE / 팀장</h1>
                     <ul class="stack-btn">
                         <li>Node.js</li>
                         <li>Express</li>
@@ -434,7 +447,7 @@
             </div>
             <div class="detail-content">
                 <div class="timeline-block">
-                    <h1>위치 및 이미지 기반 웹 솔루션 — 예비 창업 (대표)</h1>
+                    <h1>위치 및 이미지 기반 웹 솔루션 — 예비 창업(팀장)</h1>
                     <ul class="stack-btn">
                         <li>안양시 제안</li>
                         <li>백엔드 개발</li>
