feat: 배운점 작성중

--- a/index.html
+++ b/index.html
@@ -251,7 +251,20 @@
                                 <i class="fas fa-square"></i>배운점
                             </span>
                             <br />
-                            <span style="margin-left: 10px;">  </span>
+                            <span style="margin-left: 10px;">해커톤 1차 평가를 진행하며 
+                                <span class="code-style">
+                                    'Mau 500만에 달성하면 Elasticsearch, MySQl 대용량 처리와 동기화를 어떻게 할 것인가'
+                                </span>
+                                라는 질문에 단순히 검색 최적화만 생각해야 하는 것이 아닌 기업에서는 대용량 처리에 관심이 많고 이를 고민해야 함을 할게되었습니다. 
+                                그리하여 해커톤 이후 데이터 동기화를 위한 
+                                <span class="code-style">
+                                    Elasticsearch의 노드 구성법
+                                </span>
+                                과 
+                                <span class="code-style">
+                                    logstash를 활용한 스케쥴링 방식
+                                </span>
+                                을 통한 MySQL과 Elasticsearch의 동기화에 대하여 개발을 진행하며 고민을 하고 있습니다.</span>
                         </li>
                         <li>
                             <a target="_blank" rel="author" href="https://github.com/team-conSOLtant
@@ -335,7 +348,18 @@
                                 <i class="fas fa-square"></i>배운점
                             </span>
                             <br />
-                            <span style="margin-left: 10px;">  </span>
+                            <span style="margin-left: 10px;">
+                                이전 프로젝트의 수동 배포를 매번 진행하는 것에 불편한 점이 많았습니다. 
+                                이를 위해 
+                                <span class="code-style">
+                                    Docker GitHub CI/CD 파이프라인
+                                </span>
+                                을 구축하며 배포 자동화를 진행하였고 
+                                <span class="code-style">
+                                    Gemini API
+                                </span>
+                                를 통해 개인화 여행 코스를 추천해주는 프롬프팅을 구현했습니다. 
+                            </span>
                         </li>
                         <li>
                             <a target="_blank" rel="author" href="https://github.com/TongueTripVogue" class="underline-link" title="프로젝트 자세한 설명" >
@@ -475,13 +499,13 @@
                                 <li>▫ selenium 이용하여 계단, 계단 침수 데이터 2만개 크롤링 진행</li>
                             </ul>
                         </li>
-                        <li>
+                        <!-- <li>
                             <span class="detail-content-midname">
                                 <i class="fas fa-square"></i>배운점
                             </span>
                             <br />
                             <span style="margin-left: 10px;">  </span>
-                        </li>
+                        </li> -->
                         <li>
                             <span class="detail-content-midname non-bold">
                                 <!-- <i class="fas fa-square"></i> -->
