--- a/index.html
+++ b/index.html
@@ -275,6 +275,89 @@
                     </ul>
                 </div>
                 <div class="timeline-block">
+                    <time>2024.07 - 2024.08</time>
+                    <h1>하이라이트 기반 스크랩 및 공유 서비스 — BE & FE</h1>
+                    <ul class="stack-btn">
+                        <li>SpringBoot</li>
+                        <li>MYSQL</li>
+                        <li>React</li>
+                        <li>chrom Extension</li>
+                        <li>Elasticsearch</li>
+                        <li>AWS</li>
+                    </ul>
+                    <p>: chrom extension을 통해 기사를 스크랩 한 후 이를 다른 사람들과 인사이트를 공유 및 인사이트 추천 서비스</p>
+                    <ul class="make_interval">
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>기간
+                            </span>
+                            <span> : 2개월</span>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>인원
+                            </span>
+                            <span> : FE 3인 / BE 3인</span>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>담당
+                            </span>
+                            <span> : 개발(BE/ FE), 기획</span>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>개발 담당 내역
+                            </span>
+                            <ul class="detail-content-ul">
+                                <li class="style-bold">
+                                    <i class="fas fa-play" style="color: #cbd5e1;"></i> Backend
+                                </li>
+                                <li>
+                                    ▫ Docker로 Elasticsearch 구축하고 단일 키워드 검색 API 구현하여 성능 최적화
+                                </li>
+                                <li>
+                                    ▫ 스크랩 생성 시, 낙관적 락 <span class="code-style">PESSIMISTIC_WRITE</span> 을 통한 데이터 무결성 유지
+                                </li>
+                                <li class="style-bold">
+                                    <i class="fas fa-play" style="color: #cbd5e1;"></i> Frontend
+                                </li>
+                                <li>
+                                    ▫ 서비스 소개 페이지 '스크롤에 따른 이미지 크기 변경' 등 인터렉티브한 페이지 구성
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>배운점
+                            </span>
+                            <br />
+                            <span style="margin-left: 10px;">
+                                <span class="code-style">
+                                    ES의 역인덱스
+                                </span> 를 통해 약 500개의 기사 데이터를 비교 분석한 결과, 전체 탐색을 진행하는 
+                                <span class="code-style">
+                                    RDBMS 대비 3배 빠른 검색 속도
+                                </span>
+                                를 확보할 수 있었습니다. 또한, Shard와 Replica를 통해 대용량 데이터를 파티셔닝하고, 노드를 수평 확장하여 동기화 문제를 예방하고자 했습니다.
+                                <br />
+                                또한, 스크랩 생성 기능을 구현하면서, <span class="code-style">동시에 다수의 요청이 발생</span>하여 데이터 무결성에 문제가 있었습니다. 이를 위해 
+                                <span class="code-style">
+                                    비관적 락(PESSIMISTIC_WRITE)
+                                </span>
+                                
+                                을 적용하여 트랜잭션이 완료될 때까지 다른 트랜잭션이 접근하지 못하도록 하여 데이터 무결성을 보장했습니다.
+                            </span>
+                        </li>
+                        <li>
+                            <a target="_blank" rel="author" href="https://github.com/getsbee/getsBee/tree/main/backend
+                            " class="underline-link" title="프로젝트 자세한 설명" >
+                                .. See more Go to GitHub getsBee
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="timeline-block">
                     <time>2024.03 - 2024.06</time>
                     <h1>국내 여행지 AI 맞춤 추천 웹 서비스 — BE & FE / 팀장</h1>
                     <ul class="stack-btn">
@@ -327,6 +410,9 @@
                                     ▫ Spring Security, JWT 사용자 인증, 인가 구현
                                 </li>
                                 <li>
+                                    ▫ B+트리 인덱스를 활용한 검색 시간 최적화
+                                </li>
+                                <li>
                                     ▫ Mysql DB 설계 및 구축/ REST API 설계
                                 </li>
                                 <li class="style-bold">
@@ -359,6 +445,16 @@
                                     Gemini API
                                 </span>
                                 를 통해 개인화 여행 코스를 추천해주는 프롬프팅을 구현했습니다. 
+                                <br />
+                                또한, 조회수가 높은 여행지 추천 기능 개발을 위해 DB에 약 5만 개의 여행 데이터를 기반으로 실험을 진행했습니다. 조회수 컬럼에 
+                                <span class="code-style">
+                                    B+트리 인덱스
+                                </span>
+                                를 적용한 결과, 인덱스를 사용했을 때 0초, 사용하지 않았을 때는 0.1초가 소요되어 
+                                <span class="code-style">
+                                    검색 속도가 약 10배
+                                </span>
+                                향상된다는 것을 확인했습니다. 
                             </span>
                         </li>
                         <li>
