feat: 인적사항 수정

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <!-- <img src="https://i.imgur.com/zh9eNsh.jpg"> -->
             </div>
             <div class="bio">
-            <h1 class="name">Dahyun Ko</h1>
+            <!-- <h1 class="name">Dahyun Ko</h1> -->
+            <h1 class="name"></h1>
             <p class="profession">Backend Developer</p>
             </div>
         </div>
@@ -30,24 +31,24 @@
         <div class="intro-section contact">
             <h1 class="title">Contact</h1>
             <div class="info-section info-section-display link">
-                <div class="icon-display">
+                <!-- <div class="icon-display">
                     <i class="fas fa-paper-plane"></i>
                     <span class="make_underline">kdhgby@naver.com</span>
                 </div>
                 <div class="icon-display">
                     <i class="fab fa-google"></i>
                     <span class="make_underline">dahyunbless@gmail.com</span>
-                </div>
+                </div> -->
                 <div class="icon-display">
                     <i class="fab fa-github"></i>
                     <a target="_blank" rel="author" href="https://github.com/dahyunko">
-                        <span class="make_underline">dahyunko@github</span>
+                        <span class="make_underline">github</span>
                     </a>
                 </div>
                 <div class="icon-display">
                     <i class="fab fa-codepen"></i>
                     <a target="_blank" rel="author" href="https://www.notion.so/531c4a6285074ba9b9dccbda1ac2b81a?pvs=4">
-                        <span class="make_underline">dahyun notion</span>
+                        <span class="make_underline">notion</span>
                     </a>
                 </div>
             </div>
@@ -99,6 +100,8 @@
                         <span class="mid-name">Coder related</span>
                         <ul class="stack-btn">
                             <li>Node.js</li>
+                            <li>vue.js</li>
+                            <li>react</li>
                         </ul>
                         </li>
                         <li>
@@ -160,7 +163,7 @@
                 <div class="timeline-block">
                     <time>2021.03 - 2024.02</time>
                     <h1>컴퓨터공학과</h1>
-                    <p>Sejong University, Korea</p>
+                    <!-- <p>Sejong University, Korea</p> -->
                     <li>
                         <span class="detail-content-midname"><i class="fas fa-square"></i> 소융대 학술제 최우수상 외 4건</span>
                         <span>
@@ -317,7 +320,7 @@
                                     ▫ Docker로 Elasticsearch 구축하고 단일 키워드 검색 API 구현하여 성능 최적화
                                 </li>
                                 <li>
-                                    ▫ 스크랩 생성 시, 낙관적 락 <span class="code-style">PESSIMISTIC_WRITE</span> 을 통한 데이터 무결성 유지
+                                    ▫ 스크랩 생성 시, 비관적 락 <span class="code-style">PESSIMISTIC_WRITE</span> 을 통한 데이터 무결성 유지
                                 </li>
                                 <li class="style-bold">
                                     <i class="fas fa-play" style="color: #cbd5e1;"></i> Frontend
@@ -707,7 +710,12 @@
                 <!-- 인턴 -->
                 <div class="timeline-block">
                     <time>2021.03 - 2021.12</time>
-                    <h1>(주)라이너스 — Web Publisher (인턴)</h1>
+                    <!-- <h1>(주)라이너스 — Web Publisher (인턴)</h1> -->
+                    <h1>
+                        <Span>
+                            00 기업 
+                        </Span>
+                         — Web Publisher (인턴)</h1>
                     <ul class="stack-btn">
                         <li>html5</li>
                         <li>css</li>
