--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </div>
             <div class="bio">
             <!-- <h1 class="name">Dahyun Ko</h1> -->
-            <h1 class="name"></h1>
-            <p class="profession">Backend Developer</p>
+            <h1 class="name">Developer</h1>
+            <p class="profession"> </p>
             </div>
         </div>
         <div class="intro-section about">
@@ -28,17 +28,17 @@
                 사람을 향한 소프트웨어 기술 기반의 안전하고 행복한 세상을 만드는 것이 저의 비전입니다.
             </p>
         </div>
-        <div class="intro-section contact">
+        <!-- <div class="intro-section contact">
             <h1 class="title">Contact</h1>
             <div class="info-section info-section-display link">
-                <!-- <div class="icon-display">
+                <div class="icon-display">
                     <i class="fas fa-paper-plane"></i>
                     <span class="make_underline">kdhgby@naver.com</span>
                 </div>
                 <div class="icon-display">
                     <i class="fab fa-google"></i>
                     <span class="make_underline">dahyunbless@gmail.com</span>
-                </div> -->
+                </div>
                 <div class="icon-display">
                     <i class="fab fa-github"></i>
                     <a target="_blank" rel="author" href="https://github.com/dahyunko">
@@ -52,7 +52,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
         
     </div>
     <div class="detail">
@@ -162,10 +162,10 @@
                 </div>
                 <div class="timeline-block">
                     <time>2021.03 - 2024.02</time>
-                    <h1>컴퓨터공학과</h1>
+                    <!-- <h1>컴퓨터공학과</h1> -->
                     <!-- <p>Sejong University, Korea</p> -->
                     <li>
-                        <span class="detail-content-midname"><i class="fas fa-square"></i> 소융대 학술제 최우수상 외 4건</span>
+                        <span class="detail-content-midname"><i class="fas fa-square"></i> 교내 학술제 최우수상 외 4건</span>
                         <span>
                             <a target="_blank" rel="author" href="https://github.com/SSAFY-CSStudy/OS" class="underline-link" title="프로젝트 자세한 설명" >
                                 : 위치 및 이미지 기반 웹 신고 서비스
@@ -259,13 +259,9 @@
                                     'Mau 500만에 달성하면 Elasticsearch, MySQl 대용량 처리와 동기화를 어떻게 할 것인가'
                                 </span>
                                 라는 질문에 단순히 검색 최적화만 생각해야 하는 것이 아닌 기업에서는 대용량 처리에 관심이 많고 이를 고민해야 함을 할게되었습니다. 
-                                그리하여 해커톤 이후 데이터 동기화를 위한 
+                                그리하여 해커톤 이후 데이터 동기화를 위한 Elasticsearch의 
                                 <span class="code-style">
-                                    Elasticsearch의 노드 구성법
-                                </span>
-                                과 
-                                <span class="code-style">
-                                    logstash를 활용한 스케쥴링 방식
+                                    Shard와 Replica를 통해 대용량 데이터를 파티셔닝하고, 노드를 수평 확장
                                 </span>
                                 을 통한 MySQL과 Elasticsearch의 동기화에 대하여 개발을 진행하며 고민을 하고 있습니다.</span>
                         </li>
@@ -648,7 +644,7 @@
                                             ▫ WBS 도식 화면 자세히 보기
                                         </a>
                                         <button id="toggleButton" onclick="toggleImage()" style="background: none; border: none; color:#444444;"><i class="fas fa-play fa-rotate-90" style="color: #cbd5e1;"></i></button>
-                                        <img id="wbsImage" src="https://user-images.githubusercontent.com/101400650/267573451-16454258-8e70-4b52-a47a-3eb00a870668.png" style="width: 100%; display: none; ">
+                                        <img id="wbsImage" src="https://user-images.githubusercontent.com/101400650/267573451-16454258-8e70-4b52-a47a-3eb00a870668.png" style="width: 100%; display: block; ">
                                     </li>
                                 </ul>
                             </span>
@@ -665,7 +661,7 @@
                                 </li>
                                 <li>
                                     <span class="detail-content-date">▫ 2022.12.22</span>
-                                    2022년 제1회 소프트웨어융합대학 학술제 - 최우수상
+                                    2022년 제1회 교내 학술제 - 최우수상
                                 </li>
                                 <li>▫ 외 수상내역 4회</li>
                                 <li class="style-bold"><i class="fas fa-play" style="color: #cbd5e1;"></i> 업적</li>
@@ -676,7 +672,7 @@
                                     ▫ 혁신창업스쿨 2기 2단계 선정 MVP 제작 및 500만원 지원
                                 </li>
                                 <li>
-                                    ▫ 창의학기제 전공 12학점 인정
+                                    ▫ 교내 전공 12학점 인정
                                 </li>
                             </ul>
                         </li>
@@ -701,7 +697,7 @@
                         <li>
                             <span class="detail-content-midname">
                                 <i class="fas fa-square"></i>
-                                (주)엘핀 협업 진행
+                                AI 기업 협업 진행
                             </span>
                             <p>: "<strong class="hilight underline">AI 실내 계단 수해 인식 모델</strong>" 정확도<strong>92%</strong> 달성</p>
                         </li>
