--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                                             ▫ WBS 도식 화면 자세히 보기
                                         </a>
                                         <button id="toggleButton" onclick="toggleImage()" style="background: none; border: none; color:#444444;"><i class="fas fa-play fa-rotate-90" style="color: #cbd5e1;"></i></button>
-                                        <img id="wbsImage" src="https://user-images.githubusercontent.com/101400650/267573451-16454258-8e70-4b52-a47a-3eb00a870668.png" style="width: 100%; display: block; ">
+                                        <img id="wbsImage" src="https://user-images.githubusercontent.com/101400650/267573451-16454258-8e70-4b52-a47a-3eb00a870668.png" style="width: 100%; display: none; ">
                                     </li>
                                 </ul>
                             </span>
